index.css
body {
    background-color: white;
    padding: 0;
    margin: 0;
}

#mainbar {
    width: 100%;
    height: 100px;
    background-color: #303030;
    padding: 0;
    margin: 0;
    border-bottom-style: solid;
    border-bottom-color: #ffed21;
    border-bottom-width: 5px;
    position: absolute;
    top: 0;
    left: 0;
}

#title {
    position: absolute;
    margin: 25px;
    font-size: 40px;
    font-family: 'Roboto', sans-serif;
    color: white;
}

.input-indicator {
    position: absolute;
    margin: 0;
    left: 485px;
    top: 25px;
    font-size: 32px;
    font-family: 'Dosis', sans-serif;
    color: white;
}

.iteminput {
    position: absolute;
    top: 25px;
    text-align: center;
    font-family: 'Dosis', sans-serif;
}

#teaminput {
    left: 550px;
    width: 100px;
    font-size: 30px;
}

#eventinput {
    left: 700px;
    width: 300px;
    height: 45px;
    font-size: 20px;
}

#content {
    position: absolute;
    top: 105px;
    left: 0;
    width: 100%;
    height: calc(100% - 105px);
    background-color: #f2f2f2;
}

#loadinggif {
    position: absolute;
    top: 200px;
    left: calc(50% - 128px)
}

#avatar {
    position: absolute;
    top: 25px;
    left: 25px;
    background-color: #a0a0a0;
}

#teamheadline {
    position: absolute;
    margin: 25px;
    left: 60px;
    font-size: 30px;
    font-family: 'Roboto', sans-serif;
}

#matches {
    position: absolute;
    left: 25px;
    top: 100px;
}

#matches p {
    font-size: 20px;
    font-family: 'Roboto', sans-serif;
}

.match {
    height: 35px;
    width: 360px;
    margin-top: 20px;
}

.matchnumberdiv {
    background-color: lightgray;
    height: 35px;
    width: 35px;
    border-left: 3px solid #4c4c4c;
    border-top: 3px solid #4c4c4c;
    border-bottom: 3px solid #4c4c4c;
    border-right: 3px solid #4c4c4c;
    border-top-left-radius: 8px;
    border-bottom-left-radius: 8px;
}

.matchnumber {
    position: relative;
    margin: 0;
    padding: 0;
    text-align: center;
    margin-top: 7px;
    font-size: 18px;
    font-family: 'Roboto', sans-serif;
}

.bluealliancef {
    background-color: #0066b3;
    height: 35px;
    width: 180px;
    border-top: 3px solid #4c4c4c;
    border-bottom: 3px solid #4c4c4c;
    margin-left: 41px;
    margin-top: -41px;
    color: white;
}

.blueallianceb {
    background-color: #0066b3;
    height: 35px;
    width: 180px;
    margin-left: 221px;
    margin-top: -41px;
    border-right: 3px solid #4c4c4c;
    border-top: 3px solid #4c4c4c;
    border-bottom: 3px solid #4c4c4c;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
    color: white;
}

.redalliancef {
    background-color: #ed1c24;
    height: 35px;
    width: 180px;
    border-top: 3px solid #4c4c4c;
    border-bottom: 3px solid #4c4c4c;
    margin-left: 41px;
    margin-top: -41px;
    color: white;
}

.redallianceb {
    background-color: #ed1c24;
    height: 35px;
    width: 180px;
    margin-left: 221px;
    margin-top: -41px;
    border-right: 3px solid #4c4c4c;
    border-top: 3px solid #4c4c4c;
    border-bottom: 3px solid #4c4c4c;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
    color: white;
}

.matchteam {
    position: relative;
    display: inline-block;
    vertical-align: top;
    margin: 0;
    padding: 0;
    width: 60px;
    text-align: center;
    margin-top: 8px;
    font-size: 16px;
    font-family: 'Roboto', sans-serif;
}

#stream {
    position: absolute;
    right: 25;
    top: 25;
}

